# my-nanoCLI-llm

./: .env.example  .gitignore  README.md  debug_gemini_models.py  editor.py  flake.nix  llm.py  main.py  pyproject.toml  test.txt  test_editor.py  test_gemini_connection.py  test_ui_mock.py  ui.py
